# Cineton

./: LICENSE.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/cineton/app/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/cineton/app/: MainActivity.kt
Android/app/src/main/java/com/cineton/app/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/cineton/app/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  Cargo.toml  log4rs.yaml
backend/migrations/: 0001_init_database.sql
backend/requests/: login.req  logout.req  register.req
backend/src/: api.rs  main.rs
backend/src/auth/: login.rs  logout.rs  mod.rs  register.rs  session.rs
backend/src/db/: db_error.rs  mod.rs
