[package]
name = "cineton-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
serde-email = "3.0.1"
regex = "1.10.4"
log4rs = {version = "1.3.0", features = ["console_appender", "file_appender", "pattern_encoder"]}
log = "0.4.21"
ring = "0.17.8"
base64 = "0.22.1"
chrono = "0.4.38"